# pytraceability

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  generate-compose.sh  pyproject.toml  run_tests.sh
.github/workflows/: ci.yml  code-quality.yml  pages.yml  unit-tests.yml
.github/workflows/install-env/: action.yml
docs/source/: conf.py  conftest.py  index.rst  quickstart.rst  sample_report.rst  summary.html
example/: example.py
pytraceability/: ast_processing.py  cli.py  collector.py  common.py  config.py  custom.py  data_definition.py  discovery.py  exceptions.py  history.py  html.py  import_processing.py  logging.py
tests/: conftest.py  factories.py  test_ast_processing.py  test_cli.py  test_collector.py  test_config.py  test_custom.py  test_decorators.py  test_discovery.py  test_exceptions.py  test_extraction.py  test_history.py  test_html.py  utils.py
tests/examples/: class_with_traceability.py  class_with_traceability_key.py  closure_with_dynamic_key.py  closure_with_dynamic_metadata.py  closure_with_metadata_in_a_variable.py  closure_with_static_key.py  closure_with_traceability.py  function_with_multiple_traceability_one_key_in_a_variable.py  function_with_traceability.py  function_with_traceability_key_as_arg.py  function_with_traceability_key_as_kwarg.py  function_with_traceability_key_in_a_variable.py  method_on_a_class_with_key_in_a_variable.py  method_on_a_class_with_traceability_key.py  with_dynamic_metadata.py  with_metadata.py
tests/examples/separate_directory/: file1.py  file2.py  function_with_traceability.py
tests/git_history_tests/: add_example_traceability.py  add_traceability_to_existing_function.py  decorator_in_a_new_file.py  decorator_moved_to_a_different_function_in_a_new_file.py  decorator_moves_file_original_file.py  rename_function.py
