[project]
name = "pytraceability"
version = "0.1.0"
description = "A python library for linking code to requirements"
authors = [
    {name = "Max Shepherd",email = "shepherd.max@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "gitpython (>=3.1.44,<4.0.0)",
    "ruff (>=0.11.1,<0.12.0)",
    "typed-argument-parser (>=1.10.1,<2.0.0)"
]

[tool.poetry]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
pyright = "^1.1.397"
pytest-raises = "^0.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
