[project]
name = "pytraceability"
version = "0.1.0"
description = "A python library for linking code to requirements"
authors = [
    {name = "Max Shepherd",email = "shepherd.max@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "ruff (>=0.11.1,<0.12.0)",
    "tomli (>=2.2.1,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "pydriller (>=2.7,<3.0)"
]

[tool.poetry]

[tool.pyright]
venvPath = "."
venv = ".venv"
reportUnnecessaryTypeIgnoreComment = true

[tool.pytraceability]
decorator_name = "pytraceability"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"
pyright = "^1.1.397"
pytest-raises = "^0.11"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
